fix(matrix): add horizontal scrolling #21

--- a/www/src/scss/base/structure.scss
+++ b/www/src/scss/base/structure.scss
@@ -27,6 +27,7 @@
 
 	&__matrix {
 		@include flex-grow(1);
+		width: 100vw;
 		overflow: auto;
 	}
 }
